# postgres-rust-logging

./: .gitignore  README.md  docker-compose.yml
postgres/: init.sql
postgres_rust_logging/: .env  Cargo.toml
postgres_rust_logging/migrations/2020-07-13-104325_logs/: down.sql  up.sql
postgres_rust_logging/src/: main.rs  models.rs  schema.rs
postgres_rust_logging/src/logs/: log.rs
