[package]
name = "postgres_rust_logging"
version = "0.1.0"
authors = ["Steve <sshoemaker@smu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.4"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
dotenv = "0.15.0"
smartstring = "0.2.3"